--- a/faq.html
+++ b/faq.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>FAQ - ENSV2 Marketplace | Frequently Asked Questions</title>
-<meta name="description" content="Frequently asked questions about buying ENS domains and subdomain leasing from ENSV2 Marketplace. Learn about pricing, transfers, suites, and ENSv2.">
+<title>FAQ - BuyETHaddress | Frequently Asked Questions</title>
+<meta name="description" content="Frequently asked questions about buying ENS domains and subdomain leasing from BuyETHaddress. Learn about pricing, transfers, suites, and ENSv2.">
 <style>
-:root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; --premium:#c0c0c0; --premiumDark:#8c8c8c; --brandFrom:#5bb1ff; --brandTo:#8b5cf6; --glow:#6df7ff; }
+:root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#3b82f6; }
 *{box-sizing:border-box} 
 html,body{height:100%;margin:0;padding:0} 
 body{background:var(--bg);color:var(--text);font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
@@ -17,7 +17,7 @@ nav a{color:#b8c5d6;text-decoration:none;font-weight:600;font-size:16px;transiti
 nav a:hover{color:#fff;transform:translateY(-2px)}
 nav a.active{color:var(--accent);font-weight:700}
 
-header{background:#0b0c10;border-bottom:1px solid #161c27;padding-top:30px}
+header{position:sticky;top:0;z-index:20;background:#0b0c10;border-bottom:1px solid #161c27;padding-top:30px}
 .wrap{max-width:1200px;margin:0 auto;padding:18px 20px}
 header .wrap{display:flex;flex-direction:column;align-items:center}
 
@@ -41,7 +41,7 @@ main .wrap{max-width:900px}
 .faq-section-title{color:var(--accent);font-size:1.6rem;font-weight:800;margin:0 0 20px;padding-bottom:10px;border-bottom:2px solid var(--edge)}
 
 .faq-item{background:var(--card);border:1px solid var(--edge);border-radius:12px;padding:24px;margin-bottom:16px;transition:all 0.3s ease}
-.faq-item:hover{border-color:var(--accent);box-shadow:0 4px 12px rgba(184,150,79,0.1)}
+.faq-item:hover{border-color:var(--accent);box-shadow:0 4px 12px rgba(59,130,246,0.1)}
 
 .faq-question{color:#fff;font-size:1.2rem;font-weight:700;margin:0 0 12px;display:flex;align-items:flex-start;gap:10px}
 .faq-question:before{content:'Q:';color:var(--accent);font-weight:800;flex-shrink:0}
@@ -51,7 +51,7 @@ main .wrap{max-width:900px}
 .faq-answer ul{margin:10px 0;padding-left:20px}
 .faq-answer li{margin-bottom:8px}
 .faq-answer a{color:var(--accent);text-decoration:none;transition:color 0.2s}
-.faq-answer a:hover{color:#9a7a3f}
+.faq-answer a:hover{color:#5b9eff}
 
 footer{background:var(--card);border-top:1px solid var(--edge);padding:40px 20px;margin-top:60px}
 footer .wrap{max-width:900px;text-align:center}
@@ -64,8 +64,8 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 .contact-box{background:var(--card);border:1px solid var(--edge);border-radius:12px;padding:24px;margin-top:40px;text-align:center}
 .contact-box h3{color:var(--accent);margin:0 0 12px;font-size:1.4rem}
 .contact-box p{color:var(--text);margin:0 0 16px}
-.contact-box a{display:inline-block;background:var(--accent);color:#fff;font-weight:700;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #8a6a2f;transition:all 0.2s;margin:4px}
-.contact-box a:hover{background:#9a7a3f;transform:translateY(-2px)}
+.contact-box a{display:inline-block;background:var(--accent);color:#fff;font-weight:700;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #2b65c7;transition:all 0.2s;margin:4px}
+.contact-box a:hover{background:#1d4ed8;transform:translateY(-2px)}
 </style>
 </head>
 <body>
@@ -80,8 +80,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     <a href="mission.html" class="nav-mission">Mission</a>
     <a href="roadmap.html" class="nav-roadmap">Roadmap</a>
     <a href="about.html" class="nav-about">About</a>
-    <a href="consignment.html" class="nav-consignment">Consignment</a>
-    <a href="resources.html" class="nav-resources">Resources</a>
+    <a href="contact.html" class="nav-contact">Contact</a>
   </div>
 </nav>
 
@@ -89,7 +88,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   <div class="wrap">
     <div class="brandblock">
       <div style="position:relative;text-align:center">
-        <div class="badge" title="Hardware wallet protected" style="position:absolute;right:-100px;top:50px">
+        <div class="badge" title="Hardware wallet protected" style="position:absolute;right:0;top:160px">
           <span class="check"></span>
           <div>
             <div class="vbold">Verified</div>
@@ -97,19 +96,13 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
           </div>
         </div>
         <div>
-          <div style="display:inline-block;position:relative">
-            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2
-            </h1>
-            <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
-          </div>
-          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
-            Marketplace
-          </h2>
-          <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
-          <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">Subdomain leasing coming soon with Namechain</div>
-          <div style="font-size:18px;color:#6c757d;font-weight:700;margin-top:12px">Never Connect Your Wallet Here!</div>
-          <div style="font-size:14px;color:#9aa0a6;font-style:italic;margin-top:4px">(Namechain subdomain leasing launching soon)</div>
+          <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:5.5rem;letter-spacing:0.5px;color:white;margin:0">
+            <span style="background:linear-gradient(90deg,#d4d4d4,#7a7a7a,#d4d4d4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-weight:800;background-size:200% 100%;animation:gradientShift 3s ease-in-out infinite">B</span><span style="background:linear-gradient(90deg,#d4d4d4,#7a7a7a,#d4d4d4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-weight:800;background-size:200% 100%;animation:gradientShift 3s ease-in-out infinite">uy</span>
+            <span style="background:linear-gradient(180deg,#3b82f6,#8b5cf6);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-weight:800;background-size:100% 200%;animation:gradientShiftVertical 3s ease-in-out infinite">ETH</span>
+            <span style="background:linear-gradient(90deg,#d4d4d4,#7a7a7a,#d4d4d4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-weight:800;background-size:200% 100%;animation:gradientShift 3s ease-in-out infinite">address</span>
+          </h1>
+          <div class="lease-callout">or Lease!</div>
+          <div style="font-size:18px;color:#22c55e;font-weight:700;margin-top:4px;text-shadow:0 0 8px rgba(34,197,94,0.3)">Never Connect Your Wallet</div>
         </div>
       </div>
       <div class="tagline">Own your identity. Own your name.</div>
@@ -167,7 +160,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
           Simple:
           <ul>
             <li>Browse our <a href="index.html">full portfolio</a> or <a href="featured.html">featured names</a></li>
-            <li>Email us at <strong><a href="mailto:buyethaddress@outlook.com">buyethaddress@outlook.com</a></strong> with the domain(s) you want</li>
+            <li>Email us at <strong>buyethaddress@outlook.com</strong> with the domain(s) you want</li>
             <li>We provide pricing and transfer details</li>
             <li>Payment in ETH, transfer via ENS manager</li>
             <li>Domain is yours - no wallet connection required</li>
@@ -334,16 +327,24 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
       </div>
     </div>
 
+    <div class="contact-box">
+      <h3>Still Have Questions?</h3>
+      <p>Get in touch - we respond to every inquiry.</p>
+      <a href="mailto:buyethaddress@outlook.com">📧 buyethaddress@outlook.com</a>
+      <a href="https://discord.gg/n28Q5Y9h" target="_blank" rel="noopener noreferrer">💬 Join Discord</a>
     </div>
   </div>
 </main>
 
 <footer>
   <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
-    <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="font-size:13px">© 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
+    <h3>Ready to Build with Premium ENS?</h3>
+    <p>1,600+ infrastructure domains available for purchase or subdomain leasing. Serious Web3 builders get serious infrastructure.</p>
+    <div style="margin-top:30px">
+      <a href="mailto:buyethaddress@outlook.com" style="display:inline-block;background:var(--accent);color:#fff;font-weight:700;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #2b65c7">Email: buyethaddress@outlook.com</a>
+    </div>
   </div>
 </footer>
+
 </body>
 </html>
