--- a/resources.html
+++ b/resources.html
@@ -92,9 +92,8 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
             Marketplace
           </h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
-          <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">Subdomain leasing coming soon with Namechain</div>
+          <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
           <div style="font-size:18px;color:#6c757d;font-weight:700;margin-top:12px">Never Connect Your Wallet Here!</div>
-          <div style="font-size:14px;color:#9aa0a6;font-style:italic;margin-top:4px">(Namechain subdomain leasing launching soon)</div>
         </div>
       </div>
       <div class="tagline">Own your identity. Own your name.</div>
@@ -118,7 +117,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         <div class="resource-desc">Comprehensive ENS analytics, domain search, and portfolio tracking</div>
       </li>
       <li>
-        <a href="https://ens.vision" target="_blank" rel="noopener noreferrer">ens.vision</a>
+        <a href="https://vision.io" target="_blank" rel="noopener noreferrer">vision.io</a>
         <div class="resource-desc">ENS marketplace data, sales tracking, and trending domains</div>
       </li>
       <li>
@@ -132,12 +131,12 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     <h3>🛒 Marketplaces</h3>
     <ul>
       <li>
-        <a href="https://opensea.io/category/ens" target="_blank" rel="noopener noreferrer">OpenSea ENS</a>
+        <a href="https://opensea.io/collection/ens" target="_blank" rel="noopener noreferrer">OpenSea ENS</a>
         <div class="resource-desc">Largest NFT marketplace - buy and sell ENS domains</div>
       </li>
       <li>
-        <a href="https://grail.io" target="_blank" rel="noopener noreferrer">Grail.io</a>
-        <div class="resource-desc">Dedicated ENS marketplace with advanced search</div>
+        <a href="https://grails.app" target="_blank" rel="noopener noreferrer">Grails.app</a>
+        <div class="resource-desc">Dedicated ENS marketplace with advanced search and 0% fees</div>
       </li>
     </ul>
   </div>
