--- a/consignment.html
+++ b/consignment.html
@@ -95,9 +95,8 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
             Marketplace
           </h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
-          <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">Subdomain leasing coming soon with Namechain</div>
+          <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
           <div style="font-size:18px;color:#6c757d;font-weight:700;margin-top:12px">Never Connect Your Wallet Here!</div>
-          <div style="font-size:14px;color:#9aa0a6;font-style:italic;margin-top:4px">(Namechain subdomain leasing launching soon)</div>
         </div>
       </div>
       <div class="tagline">Own your identity. Own your name.</div>
@@ -147,15 +146,10 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
     <p style="margin-top:30px;font-size:15px;color:var(--muted)">If you spot a valuable expiring utility domain (RWU only - infrastructure, DeFi, compliance, protocols), we'd appreciate the heads up. No guarantees on acquisition or acceptance, but quality tips help us build the strongest portfolio in ENS.</p>
 
-    <p style="margin-top:25px;font-size:16px;font-weight:700">📧 Contact: <a href="mailto:buyethaddress@outlook.com">buyethaddress@outlook.com</a></p>
+    <p style="margin-top:25px;font-size:16px;font-weight:700">📧 Contact: <a href="/cdn-cgi/l/email-protection#1d7f68647869757c79796f786e6e5d72686971727276337e7270"><span class="__cf_email__" data-cfemail="3e5c4b475b4a565f5a5a4c5b4d4d7e514b4a52515155105d5153">[email&#160;protected]</span></a></p>
     <p style="margin-top:10px;font-size:15px">Email subject: <strong>"Domain Consignment"</strong> or <strong>"Expiring Name Tip"</strong></p>
     <p style="color:var(--muted);font-size:14px;margin-top:15px">⚠️ No guarantees on acceptance. We're selective - utility names only.</p>
   </div>
 
 </div>
-</main>
-
-<footer>
-  <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
-    <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wa
+</m
