--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ENSV2™ Marketplace - Official Enterprise-grade Real World Utility Domains</title>
+<title>ENSV2™ Marketplace - Real World ENS Utility Domains</title>
 <meta name="description" content="Premium ENS marketplace with over 2000+ real world utility ENS domains. Buy or lease official Ethereum Name Service names for DeFi, staking, Layer2, validators, infrastructure.">
 <meta name="keywords" content="premium ens domains, real world utility, official ens domains, ens.tools, ENS marketplace, Ethereum Name Service, buy ENS domains, lease ENS domains, ENS subdomains, DeFi domains, crypto domains, blockchain domains, Web3 domains, ETH domains, ENS names, premium crypto domains, official ENS, ENS valuation, ENS investment, Layer2 domains, validator domains, staking domains, infrastructure domains, decentralized domains, ethereum domains, ENSv2, subdomain leasing, hierarchical subdomains">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.ensv2marketplace.com/">
-<meta property="og:title" content="ENSV2™ Marketplace - Official Enterprise-grade Real World Utility Domains">
+<meta property="og:title" content="ENSV2™ Marketplace - Real World ENS Utility Domains">
 <meta property="og:description" content="Premium ENS marketplace with over 2000+ real world utility ENS domains. Buy or lease official Ethereum Name Service names.">
 <meta property="og:image" content="https://www.ensv2marketplace.com/ENSV2newLogo.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://www.ensv2marketplace.com/">
-<meta property="twitter:title" content="ENSV2™ Marketplace - Official Enterprise-grade Real World Utility Domains">
+<meta property="twitter:title" content="ENSV2™ Marketplace - Real World ENS Utility Domains">
 <meta property="twitter:description" content="Premium ENS marketplace with over 2000+ real world utility ENS domains. Buy or lease official Ethereum Name Service names.">
 <meta property="twitter:image" content="https://www.ensv2marketplace.com/ENSV2newLogo.png">
 
@@ -26,6 +26,67 @@
 <meta name="language" content="English">
 <meta name="author" content="ENSV2™ Marketplace">
 <link rel="canonical" href="https://www.ensv2marketplace.com/">
+
+<!-- Schema.org Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "WebSite",
+      "@id": "https://www.ensv2marketplace.com/#website",
+      "url": "https://www.ensv2marketplace.com/",
+      "name": "ENSV2™ Marketplace",
+      "description": "Enterprise-grade real world utility ENS domains across 24 categories including AI & Agents, Blockchain Infrastructure, DeFi, Privacy & ZK, and more.",
+      "publisher": {
+        "@id": "https://www.ensv2marketplace.com/#organization"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://www.ensv2marketplace.com/?search={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://www.ensv2marketplace.com/#organization",
+      "name": "ENSV2™ Marketplace",
+      "url": "https://www.ensv2marketplace.com/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.ensv2marketplace.com/ENSV2newLogo.png"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "ensv2marketplace@outlook.com",
+        "contactType": "customer service"
+      },
+      "sameAs": [
+        "https://opensea.io/ensv2marketplace.eth",
+        "https://etherscan.io/address/ensv2marketplace.eth"
+      ]
+    },
+    {
+      "@type": "ItemList",
+      "@id": "https://www.ensv2marketplace.com/#domainlist",
+      "name": "Real World Utility ENS Domains",
+      "description": "Over 2,100 enterprise-grade Ethereum Name Service domains available for purchase or subdomain leasing across 24 industry categories.",
+      "url": "https://www.ensv2marketplace.com/",
+      "numberOfItems": 2102,
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "AI & Agents ENS Domains", "url": "https://www.ensv2marketplace.com/#" },
+        { "@type": "ListItem", "position": 2, "name": "Blockchain Infrastructure ENS Domains", "url": "https://www.ensv2marketplace.com/#" },
+        { "@type": "ListItem", "position": 3, "name": "DeFi & Payments ENS Domains", "url": "https://www.ensv2marketplace.com/#" },
+        { "@type": "ListItem", "position": 4, "name": "Privacy & ZK ENS Domains", "url": "https://www.ensv2marketplace.com/#" },
+        { "@type": "ListItem", "position": 5, "name": "Enterprise & Institutional ENS Domains", "url": "https://www.ensv2marketplace.com/#" }
+      ]
+    }
+  ]
+}
+</script>
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; }
 *{box-sizing:border-box} 
