--- a/resources.html
+++ b/resources.html
@@ -7,8 +7,8 @@
 <meta name="description" content="Helpful ENS tools and resources. Research tools, marketplaces, official documentation, and community links for ENS domain management.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; --premium:#c0c0c0; --premiumDark:#8c8c8c; --brandFrom:#5bb1ff; --brandTo:#8b5cf6; --glow:#6df7ff; }
-*{box-sizing:border-box} 
-html,body{height:100%;margin:0;padding:0} 
+*{box-sizing:border-box}
+html,body{height:100%;margin:0;padding:0}
 body{background:var(--bg);color:var(--text);font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 
 nav{background:#0d0f14;border-bottom:1px solid #1a1f2e;padding:0}
@@ -48,25 +48,22 @@ footer{background:var(--card);border-top:1px solid var(--edge);padding:40px 20px
 footer .wrap{max-width:900px;text-align:center}
 footer h3{color:var(--accent);margin:0 0 16px}
 footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
-
-@keyframes gradientShift {0%{background-position:0% center}50%{background-position:100% center}100%{background-position:0% center}}
-@keyframes gradientShiftVertical {0%{background-position:center 0%}50%{background-position:center 100%}100%{background-position:center 0%}}
 </style>
 </head>
 <body>
 
 <nav>
   <div class="wrap">
-    <a href="index.html" class="nav-home">Home</a>
-    <a href="suites.html" class="nav-suites">Suites</a>
-    <a href="subdomain-leasing.html" class="nav-subdomain">Subdomain Leasing</a>
-    <a href="featured.html" class="nav-featured">Featured Names</a>
-    <a href="faq.html" class="nav-faq">FAQ</a>
-    <a href="mission.html" class="nav-mission">Mission</a>
-    <a href="roadmap.html" class="nav-roadmap">Roadmap</a>
-    <a href="about.html" class="nav-about">About</a>
-    <a href="consignment.html" class="nav-consignment">Consignment</a>
-    <a href="resources.html" class="nav-resources active">Resources</a>
+    <a href="index.html">Home</a>
+    <a href="suites.html">Suites</a>
+    <a href="subdomain-leasing.html">Subdomain Leasing</a>
+    <a href="featured.html">Featured Names</a>
+    <a href="faq.html">FAQ</a>
+    <a href="mission.html">Mission</a>
+    <a href="roadmap.html">Roadmap</a>
+    <a href="about.html">About</a>
+    <a href="consignment.html">Consignment</a>
+    <a href="resources.html" class="active">Resources</a>
   </div>
 </nav>
 
@@ -105,20 +102,16 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 <div class="wrap">
 
   <div class="content-section">
-    <h2>🔧 ENS Resources & Tools</h2>
+    <h2>&#128295; ENS Resources &amp; Tools</h2>
     <p>Helpful tools and platforms for ENS research, buying, selling, and management. We're confident in our portfolio - these resources help everyone learn and grow in the ENS ecosystem.</p>
   </div>
 
   <div class="content-section">
-    <h3>📊 Research & Analytics</h3>
+    <h3>&#128202; Research &amp; Analytics</h3>
     <ul>
       <li>
         <a href="https://ens.tools" target="_blank" rel="noopener noreferrer">ens.tools</a>
         <div class="resource-desc">Comprehensive ENS analytics, domain search, and portfolio tracking</div>
-      </li>
-      <li>
-        <a href="https://vision.io" target="_blank" rel="noopener noreferrer">vision.io</a>
-        <div class="resource-desc">ENS marketplace data, sales tracking, and trending domains</div>
       </li>
       <li>
         <a href="https://ensdata.net" target="_blank" rel="noopener noreferrer">ensdata.net</a>
@@ -128,7 +121,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   </div>
 
   <div class="content-section">
-    <h3>🛒 Marketplaces</h3>
+    <h3>&#128722; Marketplaces</h3>
     <ul>
       <li>
         <a href="https://opensea.io/collection/ens" target="_blank" rel="noopener noreferrer">OpenSea ENS</a>
@@ -142,7 +135,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   </div>
 
   <div class="content-section">
-    <h3>📚 Official ENS Resources</h3>
+    <h3>&#128218; Official ENS Resources</h3>
     <ul>
       <li>
         <a href="https://ens.domains" target="_blank" rel="noopener noreferrer">ens.domains</a>
@@ -164,7 +157,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   </div>
 
   <div class="content-section">
-    <h3>⛽ Utilities</h3>
+    <h3>&#9981; Utilities</h3>
     <ul>
       <li>
         <a href="https://etherscan.io/gastracker" target="_blank" rel="noopener noreferrer">Etherscan Gas Tracker</a>
@@ -178,7 +171,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   </div>
 
   <div class="content-section">
-    <h3>💬 Community</h3>
+    <h3>&#128172; Community</h3>
     <ul>
       <li>
         <a href="https://twitter.com/ensdomains" target="_blank" rel="noopener noreferrer">@ensdomains on Twitter/X</a>
@@ -202,14 +195,9 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   <div class="wrap">
     <h3>ENSV2 Marketplace</h3>
     <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="font-size:13px">© 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
+    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
 </footer>
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  document.querySelector('.nav-resources').classList.add('active');
-});
-</script>
 </body>
 </html>
