--- a/featured.html
+++ b/featured.html
@@ -40,8 +40,6 @@ footer .wrap{max-width:900px;text-align:center}
 footer h3{color:var(--accent);margin:0 0 16px}
 footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
-@keyframes gradientShift {0%{background-position:0% center}50%{background-position:100% center}100%{background-position:0% center}}
-@keyframes gradientShiftVertical {0%{background-position:center 0%}50%{background-position:center 100%}100%{background-position:center 0%}}
 
 /* Hero Section */
 .hero{background:linear-gradient(135deg,rgba(184,150,79,0.15),rgba(154,122,63,0.15));border:2px solid var(--accent);border-radius:16px;padding:40px 30px;text-align:center;margin-bottom:40px}
@@ -284,7 +282,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="index.html" class="nav-home">Home</a>
+    <a href="/" class="nav-home">Home</a>
     <a href="suites.html" class="nav-suites">Suites</a>
     <a href="subdomain-leasing.html" class="nav-subdomain">Subdomain Leasing</a>
     <a href="featured.html" class="nav-featured active">Featured Names</a>
@@ -772,7 +770,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         </div>
       </div>
 
-    </div
+    </div>
 
 </main>
 
@@ -780,7 +778,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   <div class="wrap">
     <h3>ENSV2 Marketplace</h3>
     <p>Enterprise-grade ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="margin:8px 0">© 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
+    <p style="margin:8px 0">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
 </footer>
 
