--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ENSV2™ Marketplace - Real World ENS Utility Domains</title>
-<meta name="description" content="Premium ENS marketplace with over 2000+ real world utility ENS domains. Buy or lease official Ethereum Name Service names for DeFi, staking, Layer2, validators, infrastructure.">
-<meta name="keywords" content="premium ens domains, real world utility, official ens domains, ens.tools, ENS marketplace, Ethereum Name Service, buy ENS domains, lease ENS domains, ENS subdomains, DeFi domains, crypto domains, blockchain domains, Web3 domains, ETH domains, ENS names, premium crypto domains, official ENS, ENS valuation, ENS investment, Layer2 domains, validator domains, staking domains, infrastructure domains, decentralized domains, ethereum domains, ENSv2, subdomain leasing, hierarchical subdomains">
+<meta name="description" content="Real world utility ENS marketplace with over 2100 domains. Buy or lease official Ethereum Name Service names for DeFi, AI, Layer2, validators, staking and blockchain infrastructure.">
+<meta name="keywords" content="real world utility ENS domains, ENS marketplace, buy ENS domains, lease ENS domains, ENS names for sale, Ethereum Name Service, ENSv2, subdomain leasing, hierarchical subdomains, ens.tools, AI agent domains, DeFi domains, blockchain domains, Web3 domains, ETH domains, ENS names, official ENS, ENS valuation, ENS investment, Layer2 domains, validator domains, staking domains, infrastructure domains, decentralized domains, ethereum domains, RWA domains, crypto domains, ENS subdomains, agentic domains, ZK domains">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.ensv2marketplace.com/">
 <meta property="og:title" content="ENSV2™ Marketplace - Real World ENS Utility Domains">
-<meta property="og:description" content="Premium ENS marketplace with over 2000+ real world utility ENS domains. Buy or lease official Ethereum Name Service names.">
+<meta property="og:description" content="Real world utility ENS marketplace with over 2100 domains. Buy or lease official Ethereum Name Service names for DeFi, AI, Layer2, and blockchain infrastructure.">
 <meta property="og:image" content="https://www.ensv2marketplace.com/ENSV2newLogo.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://www.ensv2marketplace.com/">
 <meta property="twitter:title" content="ENSV2™ Marketplace - Real World ENS Utility Domains">
-<meta property="twitter:description" content="Premium ENS marketplace with over 2000+ real world utility ENS domains. Buy or lease official Ethereum Name Service names.">
+<meta property="twitter:description" content="Real world utility ENS marketplace with over 2100 domains. Buy or lease official Ethereum Name Service names for DeFi, AI, Layer2, and blockchain infrastructure.">
 <meta property="twitter:image" content="https://www.ensv2marketplace.com/ENSV2newLogo.png">
 
 <!-- Additional SEO -->
@@ -400,7 +400,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="index.html" class="nav-home active">Home</a>
+    <a href="/" class="nav-home active">Home</a>
     <a href="suites.html" class="nav-suites">Suites</a>
     <a href="subdomain-leasing.html" class="nav-subdomain">Subdomain Leasing</a>
     <a href="featured.html" class="nav-featured">Featured Names</a>
@@ -462,9 +462,9 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
       <div style="margin:20px 0">
         <div style="color:#cfe1ff;font-size:15px;margin-bottom:12px">📧 <strong>Contact us for suites or direct communication</strong></div>
         <div style="display:flex;align-items:center;gap:12px;justify-content:center;flex-wrap:wrap;margin-bottom:12px">
-          <a href="mailto:ensv2marketplace@outlook.com" style="display:inline-flex;align-items:center;gap:6px;background:#6c757d;color:#fff;font-weight:700;border-radius:8px;padding:8px 14px;text-decoration:none;border:1px solid #5a6268;transition:all 0.2s">
+          <a href="/cdn-cgi/l/email-protection#adc8c3dedb9fc0ccdfc6c8d9ddc1cccec8edc2d8d9c1c2c2c683cec2c0" style="display:inline-flex;align-items:center;gap:6px;background:#6c757d;color:#fff;font-weight:700;border-radius:8px;padding:8px 14px;text-decoration:none;border:1px solid #5a6268;transition:all 0.2s">
             <span>📧</span>
-            <span>ensv2marketplace@outlook.com</span>
+            <span><span class="__cf_email__" data-cfemail="ceaba0bdb8fca3afbca5abbabea2afadab8ea1bbbaa2a1a1a5e0ada1a3">[email&#160;protected]</span></span>
           </a>
         </div>
         <div style="color:#9aa0a6;font-size:12px">⚠️ Emails with attachments will be deleted.</div>
@@ -550,7 +550,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 <div class="wrap">
   <h3>About ENSV2™ Marketplace</h3>
   <p>We specialize in premium Ethereum Name Service domains across 24 categories including AI & Agents, Blockchain Infrastructure, DeFi, Privacy & ZK, Restaking, and more. All ENS names are stored in hardware wallets for maximum security. Subdomain leasing coming soon with ENSv2.</p>
-  <p style="margin:20px 0;font-size:16px"><strong>Contact us:</strong> <a href="mailto:ensv2marketplace@outlook.com" style="color:var(--accent);text-decoration:none;font-weight:700">ensv2marketplace@outlook.com</a></p>
+  <p style="margin:20px 0;font-size:16px"><strong>Contact us:</strong> <a href="/cdn-cgi/l/email-protection#cca9a2bfbafea1adbea7a9b8bca0adafa98ca3b9b8a0a3a3a7e2afa3a1" style="color:var(--accent);text-decoration:none;font-weight:700"><span class="__cf_email__" data-cfemail="781d160b0e4a15190a131d0c0814191b1d38170d0c14171713561b1715">[email&#160;protected]</span></a></p>
   <div style="color:var(--muted);font-size:13px">
     <p style="margin:8px 0">© 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
@@ -558,7 +558,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 </footer>
 
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const domainData = {
   "000crypto": {"categories": ["22c"], "price": 5.5, "lease": 600, "desc": "Memorable numeric crypto branding. Perfect for token indices, DeFi platforms, or digital asset aggregators."},
   "000digital": {"categories": ["22c"], "price": 5.5, "lease": 600, "desc": "Premium numeric digital identity. Ideal for Web3 platforms, NFT collections, or crypto indexing services."},
@@ -3170,23 +3170,4 @@ searchInput.addEventListener('input', (e) => {
               border-radius:6px;
               font-weight:600;
               transition:all 0.2s"
-         onmouseover="this.style.background='#d4af6a'"
-         onmouseout="this.style.background='#b8964f'">
-        Search on ENS.domains
-      </a>
-    `;
-    searchResults.style.display = 'block';
-  }
-});
-
-// Click outside to close search results
-document.addEventListener('click', (e) => {
-  if (!e.target.closest('#domainSearch') && !e.target.closest('#searchResults')) {
-    searchResults.style.display = 'none';
-  }
-});
-
-</script>
-
-</body>
-</html>
+         onmouseover="this.style.backgroun
