--- a/resources.html
+++ b/resources.html
@@ -54,7 +54,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="index.html">Home</a>
+    <a href="/">Home</a>
     <a href="suites.html">Suites</a>
     <a href="subdomain-leasing.html">Subdomain Leasing</a>
     <a href="featured.html">Featured Names</a>
