--- a/roadmap.html
+++ b/roadmap.html
@@ -7,8 +7,8 @@
 <meta name="description" content="ENSV2 Marketplace roadmap: ENSv2 migration, subdomain leasing infrastructure, and real-world utility expansion.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; --premium:#c0c0c0; --premiumDark:#8c8c8c; --brandFrom:#5bb1ff; --brandTo:#8b5cf6; --glow:#6df7ff; }
-*{box-sizing:border-box} 
-html,body{height:100%;margin:0;padding:0} 
+*{box-sizing:border-box}
+html,body{height:100%;margin:0;padding:0}
 body{background:var(--bg);color:var(--text);font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 
 nav{background:#0d0f14;border-bottom:1px solid #1a1f2e;padding:0}
@@ -35,6 +35,7 @@ main .wrap{max-width:900px}
 .content-section{background:var(--card);border:1px solid var(--edge);border-radius:14px;padding:30px;margin-bottom:30px}
 .content-section h2{color:var(--accent);margin:0 0 20px;font-size:1.8rem}
 .content-section h3{color:#fff;margin:30px 0 15px;font-size:1.3rem}
+.content-section h3:first-of-type{margin-top:0}
 .content-section p{color:var(--text);line-height:1.8;margin:0 0 15px}
 .content-section ul{color:var(--text);line-height:1.8;margin:0 0 15px;padding-left:25px}
 .content-section li{margin-bottom:8px}
@@ -45,52 +46,35 @@ footer .wrap{max-width:900px;text-align:center}
 footer h3{color:var(--accent);margin:0 0 16px}
 footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
-.phase-card {
-  background: var(--card);
-  border: 2px solid var(--accent);
-  border-radius: 14px;
-  padding: 30px;
-  margin-bottom: 30px;
-}
-.phase-card.complete { border-color: #22c55e; }
-.phase-card.active { border-color: #22c55e; background: linear-gradient(135deg, rgba(34,197,94,0.1), rgba(184,150,79,0.05)); }
-.phase-card.future { border-color: var(--accent); opacity: 0.85; }
+.phase-card{background:var(--card);border:2px solid var(--accent);border-radius:14px;padding:30px;margin-bottom:30px}
+.phase-card.complete{border-color:#22c55e}
+.phase-card.active{border-color:#22c55e;background:linear-gradient(135deg,rgba(34,197,94,0.1),rgba(184,150,79,0.05))}
+.phase-card.future{border-color:var(--accent);opacity:0.85}
 
-.phase-badge {
-  display: inline-block;
-  padding: 6px 12px;
-  border-radius: 6px;
-  font-size: 13px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 15px;
-}
-.phase-badge.complete { background: linear-gradient(135deg, #b8964f, #9a7a3f); color: #fff; }
-.phase-badge.active { background: linear-gradient(135deg, #b8964f, #9a7a3f); color: #fff; }
-.phase-badge.future { background: linear-gradient(135deg, #b8964f, #9a7a3f); color: #fff; }
+.phase-badge{display:inline-block;padding:6px 12px;border-radius:6px;font-size:13px;font-weight:700;text-transform:uppercase;margin-bottom:15px;background:linear-gradient(135deg,#b8964f,#9a7a3f);color:#fff}
 
-.phase-title {
-  font-size: 1.6rem;
-  font-weight: 700;
-  color: #fff;
-  margin: 0 0 15px;
-}
+.phase-title{font-size:1.6rem;font-weight:700;color:#fff;margin:0 0 15px}
+
+.phase-card ul{color:var(--text);line-height:1.8;margin:0 0 15px;padding-left:25px}
+.phase-card li{margin-bottom:8px}
+.phase-card strong{color:var(--accent)}
+.phase-card p{color:var(--text);line-height:1.8;margin:0 0 15px}
 </style>
 </head>
 <body>
 
 <nav>
   <div class="wrap">
-    <a href="index.html" class="nav-home">Home</a>
-    <a href="suites.html" class="nav-suites">Suites</a>
-    <a href="subdomain-leasing.html" class="nav-subdomain">Subdomain Leasing</a>
-    <a href="featured.html" class="nav-featured">Featured Names</a>
-    <a href="faq.html" class="nav-faq">FAQ</a>
-    <a href="mission.html" class="nav-mission">Mission</a>
-    <a href="roadmap.html" class="nav-roadmap active">Roadmap</a>
-    <a href="about.html" class="nav-about">About</a>
-    <a href="consignment.html" class="nav-consignment">Consignment</a>
-    <a href="resources.html" class="nav-resources">Resources</a>
+    <a href="/">Home</a>
+    <a href="suites.html">Suites</a>
+    <a href="subdomain-leasing.html">Subdomain Leasing</a>
+    <a href="featured.html">Featured Names</a>
+    <a href="faq.html">FAQ</a>
+    <a href="mission.html">Mission</a>
+    <a href="roadmap.html" class="active">Roadmap</a>
+    <a href="about.html">About</a>
+    <a href="consignment.html">Consignment</a>
+    <a href="resources.html">Resources</a>
   </div>
 </nav>
 
@@ -129,67 +113,67 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 <div class="wrap">
 
   <div class="content-section">
-    <h2>🚀 Roadmap</h2>
+    <h2>&#128640; Roadmap</h2>
     <p>ENSV2 Marketplace is building the infrastructure for real-world utility ENS domains. Our focus: subdomain leasing, enterprise adoption, and expanding beyond crypto into mainstream business applications.</p>
   </div>
 
   <div class="phase-card complete">
-    <span class="phase-badge complete">✅ Completed</span>
+    <span class="phase-badge">&#9989; Completed</span>
     <h3 class="phase-title">Phase 1: Foundation (2025)</h3>
     <ul>
-      <li><strong>Built 2000+ domain portfolio</strong> - Premium real-world utility ENS domains across infrastructure categories</li>
-      <li><strong>Hardware wallet security</strong> - All domains secured on Ledger with verified ownership</li>
-      <li><strong>Brand establishment</strong> - ensv2marketplace.com website and ecosystem presence</li>
-      <li><strong>Strategic focus areas</strong> - AI/Agents, DeFi, Validators, RWA, Infrastructure, Compliance</li>
+      <li><strong>Built 2,000+ domain portfolio</strong> &mdash; Premium real-world utility ENS domains across infrastructure categories</li>
+      <li><strong>Hardware wallet security</strong> &mdash; All domains secured on Ledger with verified ownership</li>
+      <li><strong>Brand establishment</strong> &mdash; ensv2marketplace.com website and ecosystem presence</li>
+      <li><strong>Strategic focus areas</strong> &mdash; AI/Agents, DeFi, Validators, RWA, Infrastructure, Compliance</li>
     </ul>
   </div>
 
   <div class="phase-card active">
-    <span class="phase-badge active">⚡ Active Now</span>
-    <h3 class="phase-title">Phase 2: Marketplace Operations & Brand Evolution (2026)</h3>
+    <span class="phase-badge">&#9889; Active Now</span>
+    <h3 class="phase-title">Phase 2: Marketplace Operations &amp; Brand Evolution (2026)</h3>
     <p>Currently operating as a fully functional ENS storefront with proven infrastructure:</p>
     <ul>
-      <li><strong>Live marketplace operations</strong> - BuyETHaddress.com running smoothly with 2000+ domains available</li>
-      <li><strong>Manual subdomain leasing</strong> - Direct leasing arrangements for clients who need custom subdomains now</li>
-      <li><strong>OpenSea integration</strong> - Seamless domain sales through established marketplace infrastructure</li>
-      <li><strong>Brand transition</strong> - Evolving from BuyETHaddress to ENSV2 Marketplace for broader market positioning</li>
-      <li><strong>Professional storefront</strong> - Proven capabilities in domain management, client relations, and transactions</li>
-      <li><strong>Ready for ENSv2</strong> - Infrastructure in place to immediately deploy automated leasing when ENSv2 launches on Ethereum L1</li>
+      <li><strong>Live marketplace operations</strong> &mdash; BuyETHaddress.com running smoothly with 2,000+ domains available</li>
+      <li><strong>Manual subdomain leasing</strong> &mdash; Direct leasing arrangements for clients who need custom subdomains now</li>
+      <li><strong>OpenSea integration</strong> &mdash; Seamless domain sales through established marketplace infrastructure</li>
+      <li><strong>Brand transition</strong> &mdash; Evolving from BuyETHaddress to ENSV2 Marketplace for broader market positioning</li>
+      <li><strong>Professional storefront</strong> &mdash; Proven capabilities in domain management, client relations, and transactions</li>
+      <li><strong>Ready for ENSv2</strong> &mdash; Infrastructure in place to immediately deploy automated leasing when ENSv2 launches on Ethereum L1</li>
     </ul>
   </div>
 
   <div class="phase-card future">
-    <span class="phase-badge future">🔮 Coming Soon</span>
-    <h3 class="phase-title">Phase 3: ENSv2 Migration & Automated Leasing (Q2-Q3 2026)</h3>
-    <p>When ENSv2 launches on Ethereum L1, we'll scale operations:</p>
+    <span class="phase-badge">&#128302; Coming Soon</span>
+    <h3 class="phase-title">Phase 3: ENSv2 Migration &amp; Automated Leasing (Q2&ndash;Q3 2026)</h3>
+    <p>When ENSv2 launches on Ethereum L1, we&rsquo;ll scale operations:</p>
     <ul>
-      <li><strong>ENSv2 migration</strong> - Leverage ENSv2's hierarchical registries on Ethereum mainnet with 99% lower gas costs</li>
-      <li><strong>Automated subdomain leasing</strong> - Deploy smart contract-based leasing with stablecoin pricing</li>
-      <li><strong>Trustless infrastructure</strong> - Self-service leasing platform with on-chain guarantees</li>
-      <li><strong>Suite packages</strong> - Bundled domain offerings for enterprise clients</li>
+      <li><strong>ENSv2 migration</strong> &mdash; Leverage ENSv2&rsquo;s hierarchical registries on Ethereum mainnet with 99% lower gas costs</li>
+      <li><strong>Automated subdomain leasing</strong> &mdash; Deploy smart contract-based leasing with stablecoin pricing</li>
+      <li><strong>Trustless infrastructure</strong> &mdash; Self-service leasing platform with on-chain guarantees</li>
+      <li><strong>Suite packages</strong> &mdash; Bundled domain offerings for enterprise clients</li>
     </ul>
   </div>
 
   <div class="phase-card future">
-    <span class="phase-badge future">🔮 Future</span>
-    <h3 class="phase-title">Phase 4: Real-World Utility Expansion (2026-2027)</h3>
+    <span class="phase-badge">&#128302; Future</span>
+    <h3 class="phase-title">Phase 4: Real-World Utility Expansion (2026&ndash;2027)</h3>
     <ul>
-      <li><strong>Enterprise partnerships</strong> - Onboard businesses needing Web3 identity infrastructure</li>
-      <li><strong>Cross-industry domains</strong> - Expand beyond crypto into healthcare, finance, logistics, education</li>
-      <li><strong>Domain marketplace</strong> - Allow other real-world utility domain owners to list and lease</li>
-      <li><strong>API integration</strong> - Enable platforms to integrate ENS subdomain leasing directly</li>
-      <li><strong>Bulk leasing</strong> - Corporate packages for companies needing multiple subdomains</li>
+      <li><strong>Enterprise partnerships</strong> &mdash; Onboard businesses needing Web3 identity infrastructure</li>
+      <li><strong>Cross-industry domains</strong> &mdash; Expand beyond crypto into healthcare, finance, logistics, education</li>
+      <li><strong>Domain marketplace</strong> &mdash; Allow other real-world utility domain owners to list and lease</li>
+      <li><strong>API integration</strong> &mdash; Enable platforms to integrate ENS subdomain leasing directly</li>
+      <li><strong>Bulk leasing</strong> &mdash; Corporate packages for companies needing multiple subdomains</li>
     </ul>
   </div>
 
   <div class="content-section">
     <h3>Strategic Principles</h3>
     <ul>
-      <li><strong>Real-world utility first</strong> - Focus on domains that solve actual business problems</li>
-      <li><strong>Enterprise ready</strong> - Professional infrastructure for serious adoption</li>
-      <li><strong>Subdomain leasing</strong> - Recurring revenue model with affordable access</li>
-      <li><strong>Quality over quantity</strong> - Curated portfolio, not speculative flips</li>
-      <li><strong>Beyond crypto</strong> - Bringing ENS to mainstream businesses and industries</li>
+      <li><strong>Real-world utility first</strong> &mdash; Focus on domains that solve actual business problems</li>
+      <li><strong>Enterprise ready</strong> &mdash; Professional infrastructure for serious adoption</li>
+      <li><strong>Subdomain leasing</strong> &mdash; Recurring revenue model with affordable access</li>
+      <li><strong>Quality over quantity</strong> &mdash; Curated portfolio, not speculative flips</li>
+      <li><strong>Beyond crypto</strong> &mdash; Bringing ENS to mainstream businesses and industries</li>
     </ul>
   </div>
 
@@ -200,14 +184,9 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   <div class="wrap">
     <h3>ENSV2 Marketplace</h3>
     <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="font-size:13px">© 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
+    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
 </footer>
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  document.querySelector('.nav-roadmap').classList.add('active');
-});
-</script>
 </body>
 </html>
