--- a/consignment.html
+++ b/consignment.html
@@ -7,8 +7,8 @@
 <meta name="description" content="Turn unwanted ENS domains into passive income. 50/50 revenue split forever. We handle renewals, marketing, and sales - you collect checks.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; }
-*{box-sizing:border-box} 
-html,body{height:100%;margin:0;padding:0} 
+*{box-sizing:border-box}
+html,body{height:100%;margin:0;padding:0}
 body{background:var(--bg);color:var(--text);font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 
 nav{background:#0d0f14;border-bottom:1px solid #1a1f2e;padding:0}
@@ -51,25 +51,22 @@ footer{background:var(--card);border-top:1px solid var(--edge);padding:40px 20px
 footer .wrap{max-width:900px;text-align:center}
 footer h3{color:var(--accent);margin:0 0 16px}
 footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
-
-@keyframes gradientShift {0%{background-position:0% center}50%{background-position:100% center}100%{background-position:0% center}}
-@keyframes gradientShiftVertical {0%{background-position:center 0%}50%{background-position:center 100%}100%{background-position:center 0%}}
 </style>
 </head>
 <body>
 
 <nav>
   <div class="wrap">
-    <a href="index.html" class="nav-home">Home</a>
-    <a href="suites.html" class="nav-suites">Suites</a>
-    <a href="subdomain-leasing.html" class="nav-subdomain">Subdomain Leasing</a>
-    <a href="featured.html" class="nav-featured">Featured Names</a>
-    <a href="faq.html" class="nav-faq">FAQ</a>
-    <a href="mission.html" class="nav-mission">Mission</a>
-    <a href="roadmap.html" class="nav-roadmap">Roadmap</a>
-    <a href="about.html" class="nav-about">About</a>
-    <a href="consignment.html" class="nav-consignment active">Consignment</a>
-    <a href="resources.html" class="nav-resources">Resources</a>
+    <a href="/">Home</a>
+    <a href="suites.html">Suites</a>
+    <a href="subdomain-leasing.html">Subdomain Leasing</a>
+    <a href="featured.html">Featured Names</a>
+    <a href="faq.html">FAQ</a>
+    <a href="mission.html">Mission</a>
+    <a href="roadmap.html">Roadmap</a>
+    <a href="about.html">About</a>
+    <a href="consignment.html" class="active">Consignment</a>
+    <a href="resources.html">Resources</a>
   </div>
 </nav>
 
@@ -108,10 +105,10 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 <div class="wrap">
 
   <div class="content-section">
-    <h2>💰 Domain Consignment Program</h2>
-    
-    <p style="font-size:18px;line-height:1.9;color:#b8964f"><strong>Got a domain you don't want to track and maintain? Turn it into passive income instead of letting it expire.</strong></p>
-    
+    <h2>&#128176; Domain Consignment Program</h2>
+
+    <p style="font-size:18px;line-height:1.9;color:#b8964f"><strong>Got a domain you don&rsquo;t want to track and maintain? Turn it into passive income instead of letting it expire.</strong></p>
+
     <div class="highlight-box">
       <p style="margin:0;font-size:16px"><strong>50/50 Revenue Split Forever</strong></p>
       <p style="margin:10px 0 0;font-size:15px">You transfer the domain to us at renewal cost. We handle renewals, marketing, and sales. When it sells, you get 50% of the proceeds. Every time. Forever.</p>
@@ -119,9 +116,9 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
     <h3>How It Works:</h3>
     <ul>
-      <li><strong>Transfer at renewal cost:</strong> Pay us the ENS renewal fee ($5-640 depending on length), we take ownership</li>
-      <li><strong>We handle everything:</strong> Annual renewals, marketing, listing, sales negotiations - all on us</li>
-      <li><strong>50% to you forever:</strong> When the domain sells (or generates subdomain lease revenue), you get half. Not just once - ongoing revenue share</li>
+      <li><strong>Transfer at renewal cost:</strong> Pay us the ENS renewal fee ($5&ndash;640 depending on length), we take ownership</li>
+      <li><strong>We handle everything:</strong> Annual renewals, marketing, listing, sales negotiations &mdash; all on us</li>
+      <li><strong>50% to you forever:</strong> When the domain sells (or generates subdomain lease revenue), you get half. Not just once &mdash; ongoing revenue share</li>
       <li><strong>No maintenance burden:</strong> We renew it annually. You never worry about tracking or managing it again</li>
       <li><strong>Passive income stream:</strong> If we lease subdomains, you get 50% of that too</li>
     </ul>
@@ -129,7 +126,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     <h3>What We Accept:</h3>
     <ul>
       <li><strong>Real-world utility only:</strong> Infrastructure, DeFi, protocols, compliance, AI, enterprise terms</li>
-      <li><strong>No speculation names:</strong> We won't take random word combos or meme names</li>
+      <li><strong>No speculation names:</strong> We won&rsquo;t take random word combos or meme names</li>
       <li><strong>Actual value potential:</strong> Names protocols would actually use</li>
     </ul>
 
@@ -142,14 +139,25 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
       <li>Hardware wallet security (Ledger)</li>
     </ul>
 
-    <p><strong>Example:</strong> You have <em>liquidityvault.eth</em> expiring. Renewal is $5. Transfer it to us for $5. We list it at 3 ETH. It sells for 2.5 ETH. You get 1.25 ETH ($3,000+). Or we lease subdomains at $300/year - you get $150/year forever.</p>
+    <p><strong>Example:</strong> You have <em>liquidityvault.eth</em> expiring. Renewal is $5. Transfer it to us for $5. We list it at 3 ETH. It sells for 2.5 ETH. You get 1.25 ETH ($3,000+). Or we lease subdomains at $300/year &mdash; you get $150/year forever.</p>
 
-    <p style="margin-top:30px;font-size:15px;color:var(--muted)">If you spot a valuable expiring utility domain (RWU only - infrastructure, DeFi, compliance, protocols), we'd appreciate the heads up. No guarantees on acquisition or acceptance, but quality tips help us build the strongest portfolio in ENS.</p>
+    <p style="margin-top:30px;font-size:15px;color:var(--muted)">If you spot a valuable expiring utility domain (RWU only &mdash; infrastructure, DeFi, compliance, protocols), we&rsquo;d appreciate the heads up. No guarantees on acquisition or acceptance, but quality tips help us build the strongest portfolio in ENS.</p>
 
-    <p style="margin-top:25px;font-size:16px;font-weight:700">📧 Contact: <a href="/cdn-cgi/l/email-protection#1d7f68647869757c79796f786e6e5d72686971727276337e7270"><span class="__cf_email__" data-cfemail="3e5c4b475b4a565f5a5a4c5b4d4d7e514b4a52515155105d5153">[email&#160;protected]</span></a></p>
-    <p style="margin-top:10px;font-size:15px">Email subject: <strong>"Domain Consignment"</strong> or <strong>"Expiring Name Tip"</strong></p>
-    <p style="color:var(--muted);font-size:14px;margin-top:15px">⚠️ No guarantees on acceptance. We're selective - utility names only.</p>
+    <p style="margin-top:25px;font-size:16px;font-weight:700">&#128231; Contact: <a href="mailto:ensv2marketplace@outlook.com">ensv2marketplace@outlook.com</a></p>
+    <p style="margin-top:10px;font-size:15px">Email subject: <strong>&ldquo;Domain Consignment&rdquo;</strong> or <strong>&ldquo;Expiring Name Tip&rdquo;</strong></p>
+    <p style="color:var(--muted);font-size:14px;margin-top:15px">&#9888;&#65039; No guarantees on acceptance. We&rsquo;re selective &mdash; utility names only.</p>
   </div>
 
 </div>
-</m
+</main>
+
+<footer>
+  <div class="wrap">
+    <h3>ENSV2 Marketplace</h3>
+    <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
+    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
+  </div>
+</footer>
+
+</body>
+</html>
